--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
